nodejs/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-todo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-todo-app
  template:
    metadata:
      labels:
        app: node-todo-app
    spec:
      containers:
        - name: node-todo-app
          image: mahesh8887/node-todo-app:latest
          ports:
            - containerPort: 8000
