nodejs/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: node-todo-app
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: node-todo-app
