nodejs/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-todo-app-ingress
  # namespace: nginx-demo
  annotations:
    kubernetes.io/ingress.class: alb  #Use aws lb controller with this annotation
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejs/svc.yml
                port:
                  number: 80
